--- a/.config/i3/config
+++ b/.config/i3/config
@@ -15,7 +15,7 @@ exec --no-startup-id lxpanel &
 exec --no-startup-id nm-applet &
 exec --no-startup-id blueman-applet &
 exec --no-startup-id nitrogen --restore
-exec --no-startup-id compton &
+exec_always --no-startup-id "killall -q compton; compton --config ~/.config/i3/compton.conf"
 exec --no-startup-id volumeicon-alsa &
 
 ########################################
